--- a/JS/doi_tien/chuyendoitien.html
+++ b/JS/doi_tien/chuyendoitien.html
@@ -17,11 +17,11 @@
             <th></th>
         </tr>
         <tr>
-            <td><input type="number" id="dauvao" value="number"></td>
+            <td><input type="number" id="dauvao"></td>
 
 
             <td>
-                <select name="from currency" id="select1">
+                <select id="select1">
                     <option value="vietNam">vietNam</option>
                     <option value="USD">USD</option>
                 </select>
@@ -29,14 +29,14 @@
 
 
             <td>
-                <select name="to currency" id="select2">
+                <select id="select2">
                     <option value="USD">USD</option>
                     <option value="vietNam">vietNam</option>
                 </select>
             </td>
             <td><button type="button" onclick="convert()">Convert</button></td>
         </tr>
-    </table>
+    </table><br>
     <p id="result"></p>
     <script src="/doi_tien/chuyendoitien.js"></script>
 </body>
